gestion de livres terminee

--- a/bookstore/src/main/resources/application.properties
+++ b/bookstore/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=bookstore
 
-springdoc.api-docs.path=/api-docs
+# springdoc.api-docs.path=/api-docs
 server.port=1997
 
 
@@ -37,10 +37,25 @@ spring.jpa.show-sql=true
 
 ### pour xampp 
 #kol sql anda lhaja l5asssa dialect biha 
-spring.jpa.properites.hibernate.dialect=org.hibernate.dialect.MariaDBDialect 
+# spring.jpa.properites.hibernate.dialect=org.hibernate.dialect.MariaDBDialect 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 # Activer les logs pour le débogage
 logging.level.org.springframework.web=DEBUG
 logging.level.com.example.onlinestorerestapi=DEBUG
 
+
+# Specifies the path to the private key used for signing the JWT tokens
+jwt.private.key=classpath:app.key
+
+# Specifies the path to the public key used for verifying the JWT tokens
+jwt.public.key=classpath:app.pub
+
+# JWT Validity duration in seconds (1 hour)
+# jwt.expiration=3600
+# jwt.expiration= 10800
+jwt.expiration= 21600
+
+# Name of the cookie that will store the JWT token
+jwt.cookie-name=jwt-cookie
