--- a/bookstore_frontend/bookstore_frontend/angular.json
+++ b/bookstore_frontend/bookstore_frontend/angular.json
@@ -26,11 +26,13 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootswatch/dist/Minty/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
               "node_modules/bootstrap/dist/js/bootstrap.js"
+
             ]
           },
           "configurations": {
